--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.ejs": "html",
-        "karatsuba_algorithm.h": "c"
+        "karatsuba_algorithm.h": "c",
+        "karatsuba_learning.h": "c"
     }
 }
